fixed bug where contact me banner plane animation was stuck in the middle of line instead of started point, until the animation played

--- a/src/pages/homePage/components/contactBanner/_contactMeBanner.scss
+++ b/src/pages/homePage/components/contactBanner/_contactMeBanner.scss
@@ -91,6 +91,7 @@ $circle-width: 50%;
   position: absolute;
   top: -6%;
   left: -5%;
+  transform: translateX(3%), translateY(5%);
   aspect-ratio: 1;
   width: 10%;
   display: flex;
